[gd_scene load_steps=26 format=2]

[ext_resource path="res://scripts/menu/openupdates.gd" type="Script" id=1]
[ext_resource path="res://scripts/menu/openoptions.gd" type="Script" id=2]
[ext_resource path="res://scripts/menu/play_game.gd" type="Script" id=3]
[ext_resource path="res://art/menu/Matthew - DTG.png" type="Texture" id=4]
[ext_resource path="res://art/menu/start_game.png" type="Texture" id=5]
[ext_resource path="res://scripts/menu/main_menu.gd" type="Script" id=6]
[ext_resource path="res://scripts/else/leave_game.gd" type="Script" id=7]
[ext_resource path="res://art/menu/New Piskel (2).png" type="Texture" id=8]
[ext_resource path="res://art/menu/options.png" type="Texture" id=9]
[ext_resource path="res://art/menu/leave game.png" type="Texture" id=10]
[ext_resource path="res://scripts/menu/upgrades.gd" type="Script" id=11]
[ext_resource path="res://art/menu/upgrades.png" type="Texture" id=12]
[ext_resource path="res://art/Silkscreen-Bold.ttf" type="DynamicFontData" id=13]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 64, 2 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 0, 2, 64, 2 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 3.9, 21.5 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 640, 0, 640, 640 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 0, 640, 640, 640 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "anim",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 15, 10 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.2, 5.5 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 13 )

[node name="main menu" type="Node2D"]

[node name="Node2D" type="Node2D" parent="."]
visible = false
position = Vector2( 148, 79 )
z_index = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Node2D"]
scale = Vector2( 1, 1.25 )
z_index = 2
frames = SubResource( 11 )
frame = 1
speed_scale = 3.0
playing = true

[node name="Matthew-Dtg" type="Sprite" parent="."]
position = Vector2( 150, 100 )
scale = Vector2( 1.5, 1 )
texture = ExtResource( 4 )

[node name="play_game" type="Area2D" parent="."]
position = Vector2( 147, 51 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="play_game"]
position = Vector2( 3, 5.5 )
scale = Vector2( 10, 1 )
shape = SubResource( 8 )

[node name="Sprite" type="AnimatedSprite" parent="play_game"]
position = Vector2( 1, 21 )
scale = Vector2( 0.125, 0.125 )
frames = SubResource( 3 )
speed_scale = 3.0
playing = true

[node name="options" type="Area2D" parent="."]
position = Vector2( 287, 10 )
scale = Vector2( 0.6, 0.8 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="options"]
position = Vector2( 0, 3.75 )
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="options"]
position = Vector2( 0, 4.25 )
scale = Vector2( 1, 0.734375 )
texture = ExtResource( 9 )

[node name="upgrades" type="Area2D" parent="."]
position = Vector2( 287, 31 )
scale = Vector2( 0.6, 0.8 )
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="upgrades"]
position = Vector2( 0, 3.75 )
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="upgrades"]
position = Vector2( 0, 4.25 )
scale = Vector2( 1, 0.734375 )
texture = ExtResource( 12 )

[node name="leave_game" type="Area2D" parent="."]
position = Vector2( 12, 188 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="leave_game"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="leave_game"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 10 )

[node name="updates" type="Area2D" parent="."]
position = Vector2( 154, 82 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="updates"]
position = Vector2( -90, -72.5 )
scale = Vector2( 10, 1 )
shape = SubResource( 1 )

[node name="update version" type="Label" parent="updates"]
margin_left = -150.0
margin_top = -79.0
margin_right = -68.0
margin_bottom = -65.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 12 )
text = "ver 1.0 full release"

[connection signal="input_event" from="play_game" to="play_game" method="_on_play_game_input_event"]
[connection signal="mouse_entered" from="play_game" to="play_game" method="_on_play_game_mouse_entered"]
[connection signal="mouse_exited" from="play_game" to="play_game" method="_on_play_game_mouse_exited"]
[connection signal="input_event" from="options" to="options" method="_on_options_input_event"]
[connection signal="input_event" from="upgrades" to="upgrades" method="_on_upgrades_input_event"]
[connection signal="input_event" from="leave_game" to="leave_game" method="_on_leave_game_input_event"]
[connection signal="input_event" from="updates" to="updates" method="_on_updates_input_event"]
